tests/compile_fail/rebind_other_root.stderr
error[E0597]: `tag` does not live long enough
  --> tests/compile_fail/rebind_other_root.rs:5:5
   |
5  |     new_root!(owner2, root2);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ borrowed value does not live long enough
...
14 | }
   | -
   | |
   | `tag` dropped here while still borrowed
   | borrow might be used here, when `_cell_owner` is dropped and runs the `Drop` code for type `main::new_cell_owner`
   |
   = note: values in a scope are dropped in the opposite order they are defined
   = note: this error originates in the macro `new_root` (in Nightly builds, run with -Z macro-backtrace for more info)
